# lvgl_binding_rust

./: .gitmodules  Cargo.toml  LICENSE
.cargo/: config.toml
lvgl/: Cargo.toml
lvgl-base/: Cargo.toml
lvgl-base/src/: color.rs  layout.rs  obj.rs
lvgl-base/src/typing/: align.rs  anim.rs  event.rs  flag.rs  flex.rs  image.rs  mod.rs  part.rs  state.rs
lvgl-macro/: Cargo.toml
lvgl-macro/src/: lib.rs
lvgl-sys/: Cargo.toml  build.rs
lvgl-sys/shims/: lvgl_sys.h
lvgl-sys/src/: lib.rs
lvgl/examples/: sdl2.rs
lvgl/src/: layer.rs  lib.rs
lvgl/src/driver/: mod.rs  sdl2.rs
lvgl/src/layout/: default.rs  flex.rs  grid.rs  mod.rs
lvgl/src/widgets/: anim.rs  image.rs  label.rs  mod.rs  obj.rs  tileview.rs
rust-lvgl/: Cargo.toml
rust-lvgl-base/: Cargo.toml
rust-lvgl-base/src/: color.rs  driver.rs  font.rs  layout.rs  lib.rs  obj.rs
rust-lvgl-base/src/typing/: align.rs  anim.rs  color.rs  dir.rs  event.rs  flag.rs  flex.rs  grid.rs  image.rs  indev.rs  label.rs  mod.rs  part.rs  point.rs  scroll.rs  size.rs  snapshot.rs  text.rs  (+2 more)
rust-lvgl-macro/: Cargo.toml
rust-lvgl-macro/src/: lib.rs
rust-lvgl-sys/: Cargo.toml  build.rs
rust-lvgl-sys/shims/: lvgl_sys.h
rust-lvgl/examples/: sdl2.rs
rust-lvgl/src/: layer.rs  lib.rs
rust-lvgl/src/driver/: evdev.rs  fbdev.rs  mod.rs  sdl2.rs
rust-lvgl/src/layout/: default.rs  flex.rs  grid.rs  mod.rs
rust-lvgl/src/widgets/: anim.rs  button.rs  gif.rs  image.rs  keyboard.rs  label.rs  list.rs  lottie.rs  menu.rs  mod.rs  msgbox.rs  obj.rs  pinyin.rs  qrcode.rs  slider.rs  switch.rs  textarea.rs  tileview.rs
