[package]
name = "rust-lvgl"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2"
rust-lvgl-sys = { path = "../rust-lvgl-sys" }
rust-lvgl-base = { path = "../rust-lvgl-base" }
rust-lvgl-macro = { path = "../rust-lvgl-macro" }


[features]
sdl2 = ["rust-lvgl-sys/sdl2"]
fbdev = []
evdev = []
tiny_ttf = ["rust-lvgl-sys/tiny_ttf", "rust-lvgl-base/tiny_ttf"]
tiny_ttf_file = ["rust-lvgl-sys/tiny_ttf_file", "rust-lvgl-base/tiny_ttf_file"]
qrcode = ["rust-lvgl-sys/qrcode"]
pinyin = ["rust-lvgl-sys/pinyin"]
lottie = ["rust-lvgl-sys/lottie"]
